force-app/main/default/objects/Domain__c/Domain__c.object-meta.xml
<CustomObject>
    <label>Domain</label>
    <nameField>
        <label>Domain Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Domains</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>