force-app/main/default/objects/Domain__c/fields/Domain_Contact__c.field-meta.xml
<CustomField>
    <fullName>Domain_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Domain Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Domains</relationshipLabel>
    <relationshipName>Domains</relationshipName>
    <type>Lookup</type>
</CustomField>