force-app/main/default/objects/Domain__c/fields/Domain_Status__c.field-meta.xml
<CustomField>
    <fullName>Domain_Status__c</fullName>
    <label>Domain Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Inactive</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>