force-app/main/default/objects/Domain__c/fields/In_Image__c.field-meta.xml
<CustomField>
    <fullName>In_Image__c</fullName>
    <defaultValue>false</defaultValue>
    <label>In-Image</label>
    <type>Checkbox</type>
</CustomField>