force-app/main/default/objects/Domain__c/fields/In_Image_Sub_Products__c.field-meta.xml
<CustomField>
    <fullName>In_Image_Sub_Products__c</fullName>
    <label>In-Image Sub Products</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Studio</fullName>
            </value>
            <value>
                <fullName>Studio 728x90</fullName>
            </value>
            <value>
                <fullName>Runway</fullName>
            </value>
            <value>
                <fullName>Canvas</fullName>
            </value>
            <value>
                <fullName>Broadway</fullName>
            </value>
            <value>
                <fullName>Slider</fullName>
            </value>
            <value>
                <fullName>Pencil</fullName>
            </value>
            <value>
                <fullName>Content</fullName>
            </value>
            <value>
                <fullName>Display</fullName>
            </value>
            <value>
                <fullName>Video</fullName>
            </value>
            <value>
                <fullName>Embedded Video</fullName>
            </value>
            <value>
                <fullName>Top</fullName>
            </value>
            <value>
                <fullName>Test</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>