force-app/main/default/objects/Domain__c/fields/In_Screen__c.field-meta.xml
<CustomField>
    <fullName>In_Screen__c</fullName>
    <defaultValue>false</defaultValue>
    <label>In-Screen</label>
    <type>Checkbox</type>
</CustomField>