force-app/main/default/objects/Domain__c/fields/In_Screen_Sub_Products__c.field-meta.xml
<CustomField>
    <fullName>In_Screen_Sub_Products__c</fullName>
    <label>In-Screen Sub Products</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Brand</fullName>
            </value>
            <value>
                <fullName>Corner Display</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>