force-app/main/default/objects/Domain__c/fields/In_Slot__c.field-meta.xml
<CustomField>
    <fullName>In_Slot__c</fullName>
    <defaultValue>false</defaultValue>
    <label>In-Slot</label>
    <type>Checkbox</type>
</CustomField>