force-app/main/default/objects/Domain__c/fields/In_Slot_Sub_Products__c.field-meta.xml
<CustomField>
    <fullName>In_Slot_Sub_Products__c</fullName>
    <label>In-Slot Sub Products</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>In-Slot</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>