force-app/main/default/objects/Domain__c/fields/Live_Date__c.field-meta.xml
<CustomField>
    <fullName>Live_Date__c</fullName>
    <label>Live Date</label>
    <type>Date</type>
</CustomField>