force-app/main/default/objects/Domain__c/fields/Native__c.field-meta.xml
<CustomField>
    <fullName>Native__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Native</label>
    <type>Checkbox</type>
</CustomField>