force-app/main/default/objects/Domain__c/fields/Native_Sub_Products__c.field-meta.xml
<CustomField>
    <fullName>Native_Sub_Products__c</fullName>
    <label>Native Sub Products</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>In-Feed</fullName>
            </value>
            <value>
                <fullName>In-Article</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>