force-app/main/default/objects/Domain__c/fields/Overrides__c.field-meta.xml
<CustomField>
    <fullName>Overrides__c</fullName>
    <label>Overrides</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>