force-app/main/default/objects/Domain__c/fields/Vertical__c.field-meta.xml
<CustomField>
    <fullName>Vertical__c</fullName>
    <label>Vertical</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Auto</fullName>
            </value>
            <value>
                <fullName>Business &amp; Finance</fullName>
            </value>
            <value>
                <fullName>Entertainment, Fashion</fullName>
            </value>
            <value>
                <fullName>Food &amp; Drink</fullName>
            </value>
            <value>
                <fullName>Gaming</fullName>
            </value>
            <value>
                <fullName>Health &amp; Wellness</fullName>
            </value>
            <value>
                <fullName>Home &amp; Garden</fullName>
            </value>
            <value>
                <fullName>Humor Lifestyles</fullName>
            </value>
            <value>
                <fullName>Miscellaneous</fullName>
            </value>
            <value>
                <fullName>News</fullName>
            </value>
            <value>
                <fullName>Social Networks</fullName>
            </value>
            <value>
                <fullName>Sports</fullName>
            </value>
            <value>
                <fullName>Technology</fullName>
            </value>
            <value>
                <fullName>Travel</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>