force-app/main/default/objects/Domain__c/fields/Zone_Description__c.field-meta.xml
<CustomField>
    <fullName>Zone_Description__c</fullName>
    <label>Zone Description</label>
    <type>TextArea</type>
</CustomField>