force-app/main/default/objects/Domain__c/fields/Zone_ID__c.field-meta.xml
<CustomField>
    <fullName>Zone_ID__c</fullName>
    <label>Zone ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>