force-app/main/default/objects/Domain__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Domain_URL__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>